tighten left column to avoid wrap on 1280 screen

--- a/css/site.less
+++ b/css/site.less
@@ -79,7 +79,7 @@ input[type='text'] {
 #left {
     float: left;
     margin-right: 30px;
-    max-width: 880px;
+    max-width: 860px;
 }
 
 #right {
